@@ -24,21 +24,9 @@
 #ifdef HAVE_CONFIG_H
 #include "config.h"
 #endif
+#include <stdlib.h>
 #include <glib/gi18n.h>
-#ifdef USE_GNOME
-#include <gnome.h>
-#endif /* USE_GNOME */
 #include "im-chooser-simple.h"
-
-#ifdef USE_GNOME
-static void
-_im_changed_cb(IMChooserSimple *im,
-	       gpointer         data)
-{
-	GtkWidget *button = GTK_WIDGET (data);
-
-	gtk_widget_set_sensitive(button, im_chooser_simple_is_modified(im));
-}
 
 static void
 _im_notify_n_im_cb(IMChooserSimple *im,
@@ -82,7 +70,6 @@ _real_style_set(GtkWidget *widget,
 	gtk_container_set_border_width (GTK_CONTAINER (dialog->action_area),
 					5);
 }
-#endif /* USE_GNOME */
 
 static void
 _dialog_response_cb(GtkDialog *dialog,
@@ -93,25 +80,6 @@ _dialog_response_cb(GtkDialog *dialog,
 	    case GTK_RESPONSE_DELETE_EVENT:
 	    case GTK_RESPONSE_OK:
 		    break;
-#ifdef USE_GNOME
-	    case GTK_RESPONSE_APPLY:
-		    G_STMT_START {
-			    GnomeClient *client;
-
-			    if ((client = gnome_master_client()) == NULL) {
-				    g_warning("Failed to get the master client instance.");
-				    return;
-			    }
-			    gnome_client_request_save(client,
-						      GNOME_SAVE_GLOBAL,
-						      TRUE,
-						      GNOME_INTERACT_ANY,
-						      FALSE,
-						      TRUE);
-			    return;
-		    } G_STMT_END;
-		    break;
-#endif /* USE_GNOME */
 	    default:
 		    g_warning("Unknown response id: %d", response_id);
 		    return;
@@ -126,10 +94,6 @@ main(int    argc,
 {
 	GtkWidget *window, *widget, *close_button;
 	IMChooserSimple *im;
-#ifdef USE_GNOME
-	GnomeProgram *program;
-	GtkWidget *logout_button, *logout_image;
-#endif /* USE_GNOME */
 	gchar *iconfile;
 
 #ifdef ENABLE_NLS
@@ -140,14 +104,7 @@ main(int    argc,
 	textdomain (GETTEXT_PACKAGE);
 #endif /* ENABLE_NLS */
 
-#ifdef USE_GNOME
-	program = gnome_program_init("im-chooser", VERSION,
-				     LIBGNOMEUI_MODULE,
-				     argc, argv,
-				     NULL);
-#else
 	gtk_init(&argc, &argv);
-#endif /* USE_GNOME */
 
 	window = gtk_dialog_new();
 	gtk_window_set_title(GTK_WINDOW (window), _("IM Chooser - Input Method configuration tool"));
@@ -156,15 +113,7 @@ main(int    argc,
 	gtk_window_set_icon_from_file(GTK_WINDOW (window), iconfile, NULL);
 	gtk_container_set_border_width(GTK_CONTAINER (window), 4);
 	gtk_container_set_border_width(GTK_CONTAINER (GTK_DIALOG (window)->vbox), 0);
-#ifdef USE_GNOME
-	close_button = gtk_button_new_from_stock(GTK_STOCK_CLOSE);
-	logout_button = gtk_button_new_with_mnemonic(_("_Log Out"));
-	logout_image = gtk_image_new_from_stock(GTK_STOCK_QUIT, GTK_ICON_SIZE_BUTTON);
-	gtk_button_set_image(GTK_BUTTON (logout_button), logout_image);
-	gtk_dialog_add_action_widget(GTK_DIALOG (window), logout_button, GTK_RESPONSE_APPLY);
-#else
 	close_button = gtk_button_new_from_stock(GTK_STOCK_OK);
-#endif /* USE_GNOME */
 	gtk_dialog_add_action_widget(GTK_DIALOG (window), close_button, GTK_RESPONSE_OK);
 	gtk_dialog_set_has_separator(GTK_DIALOG (window), FALSE);
 
@@ -178,13 +127,7 @@ main(int    argc,
 	gtk_widget_show_all(window);
 	gtk_box_pack_start(GTK_BOX (GTK_DIALOG (window)->vbox), widget, TRUE, TRUE, 0);
 
-#ifdef USE_GNOME
 	GTK_WIDGET_GET_CLASS (GTK_DIALOG (window))->style_set = _real_style_set;
-	gtk_widget_set_sensitive(logout_button, FALSE);
-
-	g_signal_connect(im, "changed",
-			 G_CALLBACK (_im_changed_cb), logout_button);
-#endif /* USE_GNOME */
 
 	g_signal_connect(window, "response",
 			 G_CALLBACK (_dialog_response_cb), im);
@@ -192,9 +135,6 @@ main(int    argc,
 	gtk_main();
 
 	g_object_unref(im);
-#ifdef USE_GNOME
-	g_object_unref(program);
-#endif
 
 	return 0;
 }
